--- a/estilo/style.css
+++ b/estilo/style.css
@@ -72,6 +72,7 @@ header{
     text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.342);   
     min-height: 150px;
     margin-top: -10px;
+    width: 100%;
 }
 
 nav > a{
@@ -90,6 +91,7 @@ nav{
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.301);
     padding: 20px;
     margin: auto;
+    width: 100%;
 }
 
 nav > a:hover{
@@ -144,7 +146,7 @@ h3{
     font-size: 1.3em;
 }
 
-#credito{
+footer{
     background-color: #063d14;
     color: white;
     font-weight: bold;
@@ -153,4 +155,5 @@ h3{
     margin-bottom: 0%;
     text-align: center;
     font-size: 1em;
+    width: 100%;
 }
