--- a/media-query.css
+++ b/media-query.css
@@ -1,5 +1,12 @@
 @charset "UTF-8";
 
+@media  screen and (min-width: 300px) and (max-width: 766px) {
+
+ ul.conteiner{
+   display: flex;
+ }
+}
+
 @media  screen and (min-width: 768px) {
     main{
         width: 800px;
