--- a/media-query.css
+++ b/media-query.css
@@ -13,6 +13,11 @@
 @media  screen and (min-width: 768px) {
     main{
         width: 800px;
+
+    }
+
+    main p{
+        font-size: 1.8em;
     }
 
     header h1{
