--- a/media-query.css
+++ b/media-query.css
@@ -6,7 +6,7 @@
    display: flex;
    justify-content: space-between;
    font-size: 0.86em;
-   width: 395px;
+   width: 86%;
    margin-left: -25px;
  }
 }
