--- a/media-query.css
+++ b/media-query.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 
+@media  screen and (min-width: 0px) and (max-width: 600px) {
+    article > ul{
+        columns: 1;   
+    }
+}
+
 @media  screen and (min-width: 600px) and (max-width: 768px) {
 
  ul.conteiner{
