--- a/media-query.css
+++ b/media-query.css
@@ -3,6 +3,7 @@
 @media  screen and (min-width: 0px) and (max-width: 600px) {
     article > ul{
         columns: 1;   
+        list-style-type: disc;   
     }
 }
 
